Capacity scheulder bug fixes